--- a/website/index.qmd
+++ b/website/index.qmd
@@ -5,8 +5,18 @@ title: "STAT 479 (Fall 2025): Sports Analytics"
 Welcome to STAT 479 (Special Topics in Statistics)!
 This iteration of the course will focus on sports analytics.
 
-Lectures notes, instructions for the course project, and additional tutorials and exercises will be posted to this website.
+All course material including lecture slides, code to reproduce the analyses discussed in lecture, and information about the projects will be posted on this website.
 So, please bookmark this page and check it regularly throughout the course.
+We will use Canvas for course announcement, assignment submission, and grading. The Canvas course page is accessible via [this link]().
+We will also use Piazza for specific discussions about course content (e.g., sharing additional information/resources related to material discussed in lecture; answering questions about data, method, and code; etc.) and more general discussions about sports analytics (e.g., sharing job postings, open data competition opportunities, popular press articles, and other analyses you might find online etc.)
+The Piazza page is accessible via [this link]().
+
+:::{.callout-important}
+## Access to Canvas and Piazza
+The Canvas and Piazza sites associated with this course are limited to students enrolled in the course and the course teaching staff.
+Although they can freely access the course notes and code, auditors, UW--Madison students not currently enrolled in the course, and anyone not affiliated with UW--Madison will not have access to Canvas and Piazza sites. 
+Requests to access these sites will be ignored. 
+:::
 
 ## Course information
 
@@ -21,7 +31,88 @@ So, please bookmark this page and check it regularly throughout the course.
   
 **Location & Schedule:** Tuesdays & Thursdays, 11:00am-12:15pm, 1524 Morgridge Hall
 
-**Instructor & Office Hours:** [Sameer Deshpande](https://skdeshpande91.github.io) (sameer.deshpande@wisc.edu). Office Hours TBA.
+**Instructor & Office Hours:** [Sameer Deshpande](https://skdeshpande91.github.io) (sameer.deshpande@wisc.edu). Instructor office hours will take place at:
+
+  * Mondays (beginning 9/8/25) from 11:00am to 12:00pm in Morgridge Hall 5586
+  * Wednesdays (beginning 9/3/25) from 4:00pm to 5:00pm in Morgridge Hall 5586
+  * Fridays (beginning 9/5/25) from 3:00pm to 4:30pm in Morgridge Hall 3610
+
+The Monday and Wednesday office hours are designed for one-on-one or small group meetings with the instructor.
+For instance, if you have specific, personal concerns about the course, try to come during Monday and Wednesday office hours or make an appointment with the instructor.
+Friday office hours are designed for collaborative work: they can be an opportunity for multiple project groups to bounce ideas off each other, to re-run analyses shown in class together, etc.
+
+
+** Teaching Assistant & Office Hours:** Zhexuan Liu (zhexuan.liu2@wisc.edu). Office hours 
+
+
+## Requisites & Preparation
+
+This course will make **extensive** use of the [R programming language](https://www.r-project.org) through the [RStudio](https://posit.co/download/rstudio-desktop/) integrated development environment (IDE). 
+Because the formal pre-requisites for this course are STAT 333 or 340, you are expected to have previous experience using the R programming language.
+
+
+:::{.callout-important}
+
+## Warning
+
+I will assume *fluency* with basic R functionality (e.g., assignment, writing and
+executing scripts, saving data objects, setting environments, installing and loading packages), data manipulation with **dplyr** and other **tidyverse** packages, and visualization using either base R graphics or **ggplot2**. 
+I will additionally assume some familiarity with fitting statistical models in R and interpreting their output (e.g., using `lm` and `glm`).
+
+If you do not meet the formal course prerequisites and/or have not used R in a previous course, this is **not** the right course for you. 
+:::
+
+### Installing R & RStudio
+
+While you are expected to have used R in previous courses (see warning), I **strongly** recommend installing the latest version of both R and RStudio at the beginning of the course.
+As of the time of this writing, that is R version 4.5.1 and RStudio version 2025.05.
+
+You can download a version of R specific to for your operating system from [this website](https://cloud.r-project.org).
+After install R, you should download and re-install RStudio from [this website](https://posit.co/download/rstudio-desktop/).
+
+:::{.callout-tip}
+Whenever you update your version of R, you need to re-install the packages; this is a perennial source of [frustration](https://bsky.app/profile/benbushong.com/post/3lbqnkbazgh2e) for many R users] and [some good-natured humor](https://bsky.app/profile/hadley.nz/post/3lnlrbqv7qs2i) from others[^hadley].
+:::
+
+[^hadley]: Even Hadley Wickham, who leads the tidyverse team at Posit, [manually re-installs](https://bsky.app/profile/hadley.nz/post/3lnmafh3ljs2y) packages after every update
+
+### Required Packages
+
+Throughout the course, we will make extensive use of several packages in the **tidyverse**, primarily for data loading, pre-processing, and manipulation.
+We will also make extensive use of the packages **glmnet**, **lme4**, and **ranger**for model fitting.
+As the course progresses, we will introduce and install new package as required.
+For the most part, these packages will be specific to a particular sport.
+Every package that we will use in this class is available through either (i) the  Comprehensive R Archive Network (CRAN) or (ii) a public GitHub repository maintained by the packager developer.
+We typically install CRAN packages using the `install.packages()` command.
+To install packages hosted on GitHub, we will use the [`install_github()](https://devtools.r-lib.org/reference/remote-reexports.html)` function in the [**devtools**](https://devtools.r-lib.org/index.html) package, which is itself available on CRAN.
+
+For visualizations, we will try to use colorblind-friendly palettes[^tol] as much as possible.
+The package [**colorBlindness**](https://cran.r-project.org/web/packages/colorBlindness/vignettes/colorBlindness.html) contains several palettes for diverging and qualitative data.
+We will use the `Blue2DarkRed18Steps` palette from **colorBlindness** for making heatmaps (e.g., [this one](lectures/lecture08.qmd#fig-out-gam))
+
+Prior to [Lecture 2](lectures/lecture02.qmd), please make sure you install the required packages.
+```{r}
+#| label: install-packages
+#| eval: false
+install.packages(c("devtools", "tidyverse", "glmnet", "lme4", "ranger", "colorBlindness"))
+```
+
+I am also personally partial to the palette developed by [Okabe & Ito](https://jfly.uni-koeln.de/color/), which is available using the `palette.colors()` function.
+We will use this palette 
+```{r}
+#| label: oi-colors
+#| fig-width: 5
+#| fig-height: 5
+#| fig-align: "center"
+oi_colors <- 
+  palette.colors(palette = "Okabe-Ito")
+par(mar = c(3,3,2,1), mgp = c(1.8, 0.5, 0)) #<1>
+plot(1:9, 1:9, pch = 16, cex = 4, col = oi_colors) #<2>
+```
+1. The `mar` argument reserves 3 margin lines for the bottom and left sides of the plot, 2 for the top, and 1 for the right. The `mgp` argument specifies how the axis title, label, and lines are placed.
+2. Plots large, filled circles with the palette colors
+
+[^tol]: See [these notes by Paul Tol](https://sronpersonalpages.nl/~pault/) for a lot of useful information about colorblindness and how different palettes are perceived by different people. 
 
 
 
