Try fixing figures again

--- a/website/lectures/lecture11.qmd
+++ b/website/lectures/lecture11.qmd
@@ -10,15 +10,20 @@ In October 2015, the Houston Astros played the New York Yankees in the American 
 During and after the game, several Yankees fans took to social media to complain about inconsistencies in the strike zone being called by home plate umpire Eric Cooper.
 They argued that Cooper was not calling balls and strikes consistently for both teams, putting the Yankees at a distinct disadvantage.
 Beyond simple fan reaction, individual players took exception to Cooper's strike zone: after striking out, Yankees catcher Brian McCann complained to Cooper that on similar pitches, Cooper was calling strikes when the Astros were pitching but balls when the Yankees were pitching.
-@fig-mccann-castro shows two such pitches.
+@fig-mccann-castro show two such pitches. 
 
-::: {#fig-mccann-castro layout-ncol=2 fig-align="center"}
-![Pitch called a ball](figures/lecture11_mccann.png)
-![Pitch called a strike](figures/lecture11_castro.png)
+::: {#fig-mccann-castro layout-ncol=2}
+
+![Pitch called a ball](figures/lecture11_mccann.png){#fig-mccann}
+
+
+![Pitch called a strike](figures/lecture11_castro.png){#fig-castro}
+
 :::
+
 Both pitches were thrown low and outside[^lowoutside], near the bottom left corner of the strike zone[^strikezone] shown in the figure.
 Because no part of the ball passed through the strike zone, by rule, both pitches should have been called balls.
-But umpire Cooper called the pitch on the left, thrown by Yankees pitcher Masahiro Tanaka, a ball and called the pitch on the right, thrown by Astros pitcher Dallas Keuchel, a strike.
+But umpire Cooper called the pitch in @fig-mccann, thrown by Yankees pitcher Masahiro Tanaka, a ball and called the pitch in @fig-castro, thrown by Astros pitcher Dallas Keuchel, a strike.
 During the television broadcast of the game and on social media after the game[^crawfish], many speculated many speculated that the reason for this discrepancy in strike zones is due Astros catcher Jason Castro's ability to *frame* pitches, catching them in a way so as to increase the chances of the umpire calling a strike.
 
 [^lowoutside]: That is, away from the batter.
