--- a/website/lectures/lecture02.qmd
+++ b/website/lectures/lecture02.qmd
@@ -5,25 +5,30 @@ execute:
   cache: true
   freeze: auto
 ---
-## Motivation: Beth Mead's performance at EURO2022
+## Motivation: Beth Mead's performance at EURO2022 {#sec-motivation}
 
 During the EURO2022 football tournament, English player Beth Mead scored 6 goals.
-Here are screenshots (and links to videos) of three of those goals.
-Which is most impressive to you?
+Here are links to videos for three of her goals:
 
+  * Goal against Austria [link](https://youtu.be/lVGiGZN2gdw?t=1)
+  * Goal against Norway [link](https://youtu.be/lVGiGZN2gdw?t=148)
+  * Goal against Sweden [link](https://youtu.be/lVGiGZN2gdw?t=148)
+
+Which is most impressive to you?
+<!--
 ::: {#fig-mead-shots layout-ncol=3 fig-align="center"}
-![Mead shot against Austria [link](https://youtu.be/lVGiGZN2gdw?t=1)](figures/mead_austria.png)
+![Mead shot against Austria [link]](figures/mead_austria.png)
 
 ![Mead shot against Norway [link](https://youtu.be/lVGiGZN2gdw?t=57)](figures/mead_norway.png)
 
 ![Mead shot against Sweden [link](https://youtu.be/lVGiGZN2gdw?t=148)](figures/mead_sweden.png)
 
 :::
+-->
 
-
-We observed several important differences between these shots.
-For instance, Mead scored the goal against Austria in a one-on-one situation but had to shoot through several defenders against both Norway and Sweden.
-On this basis, should we view 
+There several important qualitative differences between these shots that affect our subjective comparison.
+For instance, because Mead scored against Austria in a one-on-one situation but had to shoot through multiple defenders against Norway and Sweden, we might view the former goal as easier and less impressive.
+On the other hand, lobbing the ball so it does not go over the bar takes a considerable amount of skill. 
 
 We could argue endlessly about the qualitative differences between these shots.
 To make our discussion more precise, it is helpful to **quantify** these differences.
@@ -34,24 +39,28 @@ For instance, the lob shot against Austria might look a lot less impressive if w
 Of course, Mead can't actually repeat these shots over and over again.
 In this lecture, we will introduce the **expected goals** framework, which allows us to *estimate* those long-run frequencies of goals. 
 
-## Working with soccer event data
+## Working with soccer event data {#sec-statsbomb-data}
 
 We will make use of high-resolution tracking data provided by the company StatsBomb, which was recently [acquired by Hudl](https://www.hudl.com/blog/hudl-statsbomb-press-release-en).
-As a bit of background, StatsBomb extracts player locations from game film using some pretty interesting computer vision techniques.
+StatsBomb extracts player locations from game film using some pretty interesting computer vision techniques.
 To their great credit, StatsBomb releases a small snapshot of their data for public use[^hudl]
 We can access this data directly in R using the **StatsBombR** package.
 
 [^hudl]: And props to Hudl for continuing to make this data available!
 
-You can check if the package is installed using the code `"StatsBombR" %in% rownames(installed.packages()).`
-If that code returns `FALSE`, then you should install the package using the code `devtools::install_github("statsbomb/StatsBombR")`.
-
+StatsBomb provides their public data with the package [**StatsBombR**](), which you can install using
+```{r}
+#| label: install-statsbombr
+#| eval: false
+devtools::install_github("statsbomb/StatsBombR")
+```
 
 StatsBomb organizes its free data by competition/tournament.
 The screenshot below shows a table of all the available competitions.
-We can load this table into our R environment using the function `StatsBombR::FreeCompetitions()`
+We can load this table into our R environment using the function `StatsBombR::FreeCompetitions()`.
+@fig-statsbomb-freecomps shows a snapshot of the available competitions.
 
-![Screenshot of the competitions covered in the public data](figures/statsbomb_freecomps.png){width=50% fig-align="center"}
+![Screenshot of the competitions covered in the public data](figures/statsbomb_freecomps.png){width=100% fig-align="center" #fig-statsbomb-freecomps}
 
 Each competition and season have unique id and we can also see whether it was a men's or women's competition.
 To see which matches from selected competitions have publicly available data, we can pass the corresponding rows of this table to the function `StatsBombR::FreeMatches()`.
@@ -72,7 +81,8 @@ To access the raw event-level data from a subset of matches, we need to pass the
 StatsBomb also recommends running some basic pre-processing, all of which is nicely packaged together in the functions `StatsBombR::allclean()` and  `StatsBombR::get.opposingteam().`
 
 As an example, the code chunk below pulls out publicly available event data for every women's international match.
-```{r get-wi}
+```{r}
+#| label: get-wi
 #| output: false
 #| message: false
 #| warning: false
@@ -127,22 +137,25 @@ On this view, $\textrm{XG}(\boldsymbol{\mathbf{x}})$ provides a quantitative ans
 
 The StatsBomb variable `shot.body_part.name` records the body part with which each shot was taken.
 Within our dataset of women's international matches, we can see the breakdown of these body parts.
-```{r wi-body-part}
+```{r}
+#| label: wi-body-part
 table(wi_events$shot.body_part.name)
 ```
 For this analysis, we will focus on fitting XG models using data from shots taken with a player's feet or head.
-```{r wi-shots-foot}
+```{r}
+#| label: wi-shots-foot
 #| output: false
 #| message: false
 #| warning: false
 wi_shots <-
-  wi_events |> # Adds opposing team information
-  dplyr::filter(type.name == "Shot" & shot.body_part.name != "Other") |>  # Subsets only shot event data
+  wi_events |>
+  dplyr::filter(type.name == "Shot" & shot.body_part.name != "Other") |>  
   dplyr::mutate(Y = ifelse(shot.outcome.name == "Goal", 1, 0))
 ```
 
 Later, it will be useful for us to focus only on the shots from EURO2022, so we will also create a table `euro2022_shots` of all shots from that competition using similar code.
-```{r euro2022-shots}
+```{r}
+#| label: euro2022-shots
 #| code-fold: true
 #| output: false
 #| message: false
@@ -171,7 +184,8 @@ However, on the assumption that our observed data constitute a sample from that 
   2. Within these two groups, compute the proportion of goals
 
 To keep things simple, we dropped the 23 shots that were taken with a body part other than the feet or the head.
-```{r wi-xg-body}
+```{r}
+#| label: wi-xg-body
 xg_model1 <-
   wi_shots |>
   dplyr::group_by(shot.body_part.name) |>
@@ -194,8 +208,9 @@ Similarly, we want to copy over the corresponding values for right-footed shots 
 We can do this using an [left join](https://r4ds.hadley.nz/joins.html#sec-mutating-joins).
 In the code below, we actually create a temporary version of `xg_model1` that drops the column recording the overall counts of the body part used for the shots in `wi_shots`. 
 This way, when we perform the join, we don't create a new column with these counts. 
+```{r}
+#| label: mead-xg-foot-tech
 
-```{r mead-xg-foot-tech}
 tmp_xg1 <- xg_model1 |> dplyr::select(!n) # <1>
 
 mead_shots <-
@@ -211,7 +226,8 @@ rm(tmp_xg1) # <3>
 We can now look at the what our model says about the three goals from above.
 The first, against Austria in the 15th minute; the second, against Norway in the 37th minute, and the third against Sweden in the 33rd minute.
 When These turn out to be in rows 1, 4, and 14 of the table `mead_shots`
-```{r mead-xg1-goals}
+```{r}
+#| label: mead-xg1-goals
 mead_shots |>
   dplyr::select(OpposingTeam, minute, shot.body_part.name, Y, XG1) |>
   dplyr::slice(c(1, 4, 14))
@@ -221,12 +237,13 @@ But, watching the videos a bit more closely, this conclusion is **not** especial
 The discrepancy between our qualitative comparisons and our quantitative modeling results stems from the fact that we only conditioned on the body part and did not account for the other ways that the shots are different.
 In other words, our initial XG model is much too coarse to quantify the differences between the three chances that we believe are important.
 
-### Accounting for additional features{#sec-addtl-features}
+### Accounting for additional features {#sec-addtl-features}
 
 For a more refined comparison, we need a finer XG model that conditions on more features, including ones that differ between the two shots.
 To this end, notice that Mead uses a different *technique* on the three shots: she lobs the ball into the net on the first goal, shoots the ball from the ground on the second goal, and scores the third goal off of a half-volley, striking the ball as it bounces up off the ground. 
 The StatsBomb variable `shot.technique.name` records the technique of each shot type
-```{r wi-tech}
+```{r}
+#| label: wi-tech
 table(wi_shots$shot.technique.name)
 ```
 By conditioning on both body part and technique, we can begin to build a more refined XG model.
@@ -237,7 +254,8 @@ We additionally append our new XG estimates to the table containing all of Mead'
 
 [^groupnote]: See [this StackOverflow post](https://stackoverflow.com/questions/78422148/understanding-the-purpose-of-groups-drop-in-dplyrs-summarise-function) and the [documentation](https://dplyr.tidyverse.org/reference/summarise.html#arg--groups) for `summarise` for details.
 
-```{r wi-xg-foot-tech}
+```{r}
+#| label: wi-xg-foot-tech
 xg_model2 <-
   wi_shots |>
   dplyr::group_by(shot.body_part.name, shot.technique.name) |>
@@ -254,9 +272,11 @@ mead_shots |>
   dplyr::slice(c(1, 4, 14))
 ```
 
-## More sophisticated XG models
+## More sophisticated XG models {#sec-sophisticate-xg}
+
 According to our new XG model, the right-footed lob against Austria has a *much* higher XG than the other shots against Norway and Sweden, which seems much more reasonable than our previous model.
 But are we fully satisfied with this model?
+
 One could credibly argue that even though our model returns somewhat more sensible XG estimates, it is still too coarse for to meaningfully compare the shots above.
 After all, because it does not condition on distance, our model would return exactly the same XG for right-footed volleys taken one meter and 15 meters away from the goal.
 Similarly, we could try to account for the number of defenders between the shot and the goal and the position of the keeper.
@@ -264,7 +284,8 @@ Similarly, we could try to account for the number of defenders between the shot 
 If we had access to the infinite super-population of shots, conditioning on even more features is conceptually straightforward: we look at the corresponding sub-group of the super-population defined by a particular combination of features and compute the average $Y.$
 Unfortunately, with finite data, trying to "bin-and-average" using lots of features can lead to erratic estimates.
 For instance, here are the five largest and five smallest XG estimates based on body-part and shot technique.
-```{r xg2-counts}
+```{r}
+#| label: xg2-counts
 xg_model2 |> 
   dplyr::arrange(dplyr::desc(XG2)) |> 
   dplyr::filter(dplyr::row_number() %in% c(1:5, (dplyr::n()-4):dplyr::n()))
@@ -282,20 +303,21 @@ But, on the other hand, binning and averaging with even more features carries th
 [^cromwell]: Indeed, it seems absurd to claim that, at least in women's international soccer, players will **never** score off left-footed lobs! As the Statistician Dennis Lindley put it, we must "never believe in anything absolutely" and we should "leave a little probability for the moon being made of green cheese; it can be as small as 1 in a million, but have it there since otherwise an army of astronauts returning with samples of the said cheese will leave you unmoved" [@Lindley_decision, Section 6.7, available [here](https://archive.org/details/makingdecisions00dvli/page/104/mode/2up)]. Lindley termed this principle ["Cromwell's Rule"](https://en.wikipedia.org/wiki/Cromwell%27s_rule), a reference to Oliver Cromwell's quote "I beseech you, in the bowels of Christ, think it possible that you may be mistaken" from his [letter to the Church of Scotland](https://www.olivercromwell.org/Letters_and_speeches/letters/Letter_129.pdf).
 
 *Statistical models* offer a principled approach to overcome these issues.
-We will explore several such models in [Lecture 3]().
+We will explore several such models in [Lecture 3](lecture03.qmd).
 But for now, we will rely on a model developed by StatsBomb that accounts for a large number of features based on player locations (in two dimensions), the ball location (in three dimension), and other factors like the body part, shot technique, and the actions leading up to the shot (e.g., whether shot was taken off dribble or first touch).
 You can read more about their model [here](https://www.hudl.com/blog/upgrading-expected-goals).
 Luckily for us, they include XG estimates for each shot in the public data, under the column `shot.statsbomb_xg`.
 
 For instance, here are the XG estimates from StatsBomb's model for all of Beth Mead's goals
-```{r mead-sbxg}
+```{r}
+#| label: mead-sbxg
 mead_shots |>
   dplyr::filter(Y == 1) |>
   dplyr::select(OpposingTeam, minute, shot.body_part.name, 
                 shot.technique.name, Y, shot.statsbomb_xg)
 ```
 Recall that XG quantifies a certain hypothetical long-term frequency of scoring a goal: if the shot was replayed under exactly the conditions quantified by the feature vector $\boldsymbol{\mathbf{x}}$, $\textrm{XG}(\boldsymbol{\mathbf{x}})$ is the proportion of times a goal is scored.
-So, according to StatsBomb's proprietary model, if Mead repeatedly attempted the three shots from @fig-mead-shots, we should expect them to result in goals 36%, 44%, and 9% of the time.
+So, according to StatsBomb's proprietary model, if Mead repeatedly attempted the three shots introduced in @sec-motivatino, we should expect them to result in goals 36%, 44%, and 9% of the time.
 In other words, according to StatsBomb's model, Meads goal against Sweden is much more impressive than her goals against Austria and Norway.
 One could argue, further, that this goal was somewhat lucky.
 
@@ -309,12 +331,14 @@ mead_shots |>
 ```
 We see that most of Mead's misses were on shots with very low XG values, indicating that none of these misses were especially unlucky.
 By summing the differences $Y_{i} - \textrm{XG}_{i}$ across all of her shots, we can quantify the degree to which Mead under- or over-performed the model expectations. 
-```{r mead-oe}
+```{r}
+#| label: mead-oe
 sum(mead_shots$Y - mead_shots$shot.statsbomb_xg)
 ```
 We conclude that during EURO 2022, Beth Mead scored 2.9 **more** goals than what StatsBomb's XG model expected based on the contexts in which she attempted shots.
 We can repeat this calculation --- summing over the difference between shot outcome $Y$ and $\textrm{XG}$ --- for all players in EURO 2022 to find the players that most over-performed and most under-performed the model expectations.
-```{r euro2022-oe}
+```{r}
+#| label: euro2022-oe
 goe <- 
   euro2022_shots |>
   dplyr::mutate(diff = Y - shot.statsbomb_xg) |>
