--- a/website/lectures/lecture09.qmd
+++ b/website/lectures/lecture09.qmd
@@ -21,17 +21,15 @@ Then, using a multilevel model, we will identify the players whom we would expec
 ### Accessing play-by-play NFL data {#sec-nflfastr-intro}
 
 We will use of the play-by-play data available from the [**nflfastR**](https://www.nflfastr.com) package.
-
-:::{.callout-warning}
-If you haven't already done so, be sure to install the package using the code
+The package can be installed using the code:
 ```{r}
 #| label: install-nflfastR
 #| eval: false
 install.packages("nflfastR")
 ```
-:::
+
 The package contains several functions for efficiently scraping NFL data and for pre-processing the play-by-play data.
-In this lecture and in [Lecture 10](lecture10.qmd), we will work with pre-processed play-by-play data, which we can load into our R session using the function `[nflfastR::load_pbp()](https://www.nflfastr.com/reference/load_pbp.html)`.
+In this lecture and in [Lecture 10](lecture10.qmd), we will work with pre-processed play-by-play data, which we can load into our R session using the function [`nflfastR::load_pbp()`](https://www.nflfastr.com/reference/load_pbp.html).
 
 ```{r}
 #| label: load-pbp
@@ -43,10 +41,28 @@ pbp2024 <-
 ```
 Each row of the table `pbp2024` corresponds to an individual play from the 2024-25 NFL season.
 The data table contains information about `{r} nrow(pbp2024)` distinct plays.
-Some columns of `pbp2024` contain game-level information like a unique identifier for the game (`game_id`); the week in which the game was played (`week`); whether the play took place in a regular season game (`season_type = "REG"`) or play-off game (`season_type="POST"`); and the identities of the home and away team (`home_team` and `away_team`).
-Several columns record information about the state of the game just before the start of the play including the which team has possession of the ball (`posteam`) and which team is on defense (`defteam`); the scores of the two teams (`posteam_score` and `defteam_score`); the amount of time left in the quarter (`time`); the location of the ball at the start of the play (`side_of_field` and `yardline_100`); and the down and distance to the first down marker (`down`, `ydstogo`).
-The table also contains columns recording information about the state of the game as soon as the play ends including the scores of both teams (`posteam_score_post` and `defteam_score_post`) and the number of yards gained on the play (`ydsgained`).
-It finally contains a large number of columns that record exactly what happened during the play including the type of play (e.g., run, pass, kickoff, punt, etc.; `play_type`); a narrative description of the play (`desc`); several self-explanatory indicators of what happened (e.g., `fumble`, `complete_pass`, and `passing_yards`). 
+Some columns of `pbp2024` contain game-level information including
+
+  * a unique identifier for the game (`game_id`); 
+  * the week in which the game was played (`week`); 
+  * whether the play took place in a regular season game (`season_type = "REG"`) or play-off game (`season_type="POST"`); 
+  * the identities of the home and away team (`home_team` and `away_team`).
+  
+Several columns record information about the state of the game just before the start of the play including
+
+  * which team has possession of the ball (`posteam`) and which team is on defense (`defteam`)
+  * the scores of the two teams (`posteam_score` and `defteam_score`)
+  * the amount of time left in the quarter (`time`)
+  * the location of the ball at the start of the play (`side_of_field` and `yardline_100`)
+  * the down and distance to the first down marker (`down`, `ydstogo`).
+  
+The table also contains columns recording information about the state of the game as soon as the play ends including the scores of both teams (`posteam_score_post` and `defteam_score_post`) and the number of yards gained on the play (`ydsgained`)
+It finally contains a large number of columns that record exactly what happened during the play including 
+  
+  * the type of play (e.g., run, pass, kickoff, punt, etc.; `play_type`)
+  * a narrative description of the play (`desc`)
+  * several self-explanatory indicators of what happened (e.g., `fumble`, `complete_pass`, and `passing_yards`). 
+  
 You can find a full listing of the variables[here](https://www.nflfastr.com/articles/field_descriptions.html).
 
 **nflfastR** identifies players using a unique 9-digit identifier provided by [Game Statistics and Information Systems (GSIS)](https://www.nflgsis.com/Help/About.html). 
@@ -65,7 +81,7 @@ roster2024 <-
  Paraphrase from Section 1.1 of Yurko's paper 
 -->
 Paraphrasing @Yurko2019_nflWAR, the expected points framework uses historical data to *estimate* the average number of points eventually scored by teams in similar situations.
-Similar to what we did in [Lecture 6](lecture06.qmd) with expected runs at the start and end of at-bats in baseball, the difference between the post-snap and pre-snap expected points is 
+Similar to what we did in [Lecture 6](lecture06.qmd) with expected runs at the start and end of at-bats in baseball, the difference between the post-snap and pre-snap expected points is known as expected points added (EPA).
 Generally speaking, plays that result in positive EPA are considered successful while plays resulting in negative EPA are not.
 
 @Yurko2019_nflWAR introduced an expected points model that focused on predicting the next scoring event in the half after each play.
@@ -116,8 +132,9 @@ The final prediction is formed using the proportions of trees outputting a certa
 More details are about **nflfastR**'s EP model are available [here](https://opensourcefootball.com/posts/2020-09-28-nflfastr-ep-wp-and-cp-models/).
 
 ### Basic uses of EPA {#sec-basic-usage}
+
 For each play in `pbp2024`, the column `epa` records the expected points added on the play.
-It turns out that the Herbert-to-McConckey touchdown introduced in @sec-intro was the play with the largest EPA.
+It turns out that the Herbert-to-McConckey touchdown introduced in @sec-intro was the play with the largest EPA across the entire 2024-25 regular season.
 At the start of the play, the Chargers were facing 3rd and 26 from their 14 yard line.
 According to **nflfastR**'s EP model, teams starting from the same position score about -1.54 points.
 The Chargers ended the play with a touchdown, which corresponds to a terminal game state with an EP of 7.
@@ -128,6 +145,8 @@ pbp2024 |>
   dplyr::slice_max(epa) |> #<1>
   dplyr::select(ep, desc)
 ```
+1. `slice_max()` extracts the row with the largest value in a column
+
 It turns out that Turpin's 64-yard touchdown was Dallas Cowboys' passing play with the largest EPA across the whole season.
 ```{r}
 #| label: highest-epa-cowboys
@@ -255,6 +274,7 @@ To get the average EPA on all passes thrown by a different quarterback (e.g., Da
 [^prove]: You can prove that computing group-level averages is mathematically equivalent to fitting a linear regression model with a single categorical predictor encoding group membership. Try doing this yourself or come by office hours if you'd like to see the derivation. 
 
 ```{r}
+#| label: check-dak-epa
 mean(pass2024$epa[pass2024$passer_player_id == "00-0033077"]) 
 ols_betas["passer_player_id00-0033077"] + ols_betas["(Intercept)"]
 ```
@@ -290,8 +310,7 @@ alphas |>
 By this point in the course, you probably already suspect what's going on: the extreme average EPA estimates are artifacts of small sample sizes.
 To verify that this is so, we'll add a column to `alphas` recording the number of passes thrown by each player.
 ```{r}
-#| label: n_passes
-
+#| label: n-passes
 n_passes <-
   pass2024 |>
   dplyr::group_by(passer_player_id) |> 
@@ -321,7 +340,7 @@ pass2024 |>
 
 Plotting each player's average EPA against the number of pass attempts reveals that there is a lot of (resp. very little) variation in EPA-per-pass among passers who threw a very small (resp. very large) number of passes.
 ```{r}
-#| label: avg-plot
+#| label: fig-avg-alpha
 #| fig-width: 6.5
 #| fig-asp: 0.5625
 #| fig-align: center
@@ -338,9 +357,7 @@ plot(alphas$n, alphas$ols,
 abline(h = mean(pass2024$epa), col = oi_colors[3])
 ```
 
-
-### Towards partial pooling {#sec-partial-pooling-motivation}
-
+### Partially pooling across players {#sec-partial-pooling-motivation}
 Let's return to the problem of forecasting EPA on a single new pass based solely on the identity of the passer.
 One option is to ignore the passer identity and just use the overall mean of about 0.159.
 Doing so completely ignores differences between passers, which is fairly unreasonable given the large gaps in talent between NFL quarterbacks.
@@ -367,8 +384,7 @@ The hope is, in other words, that we could *differentially shrink* every player'
 
 ## Multilevel models {#sec-multilevel-model}
 
-
-*multilevel models* provide a principled way to compute these weights *automatically*. 
+*Multilevel models* provide a principled way to compute these weights *automatically*. 
 Like in our initial analysis, our first multilevel will model the observed EPA's as noisy measurements of some underlying player-specific parameter.
 However, we make an additional model assumption: that the $\alpha_{i}$'s are themselves normally distributed around some grand mean $\alpha_{0}$ with standard deviation $\sigma_{\alpha}.$
 We can specify our model in *two levels*:
@@ -408,7 +424,7 @@ I also recommend [this blog post](https://paulrjohnson.net/blog/2022-11-01-multi
 :::
 
 
-### Fitting our multilevel model {#sec-lmer}
+### Fitting Multilevel Models {#sec-lmer}
 
 We can fit multilevel models using the [**lme4** package](https://cran.r-project.org/web/packages/lme4/index.html).
 [This cheatsheet](https://paulrjohnson.net/blog/2022-11-01-multilevel-model-r-cheatsheet/#multilevel-model-syntax-in-r) provides a really nice overview of the underlying concepts and the relevant R syntax. 
@@ -435,12 +451,9 @@ The "Random effects" section reports our estimates $\hat{\sigma} \approx 1.526$ 
 The fact that $\hat{\sigma}_{\alpha}$ is so much smaller than $\hat{\sigma}$ suggests that most of the variability in observed passing play EPA is driven more by noise than differences in latent player ability. 
 
 
-<!--
-  In a sense, $u_{i}$ represents how much more the 
--->
-We can use the function `ranef` to extract the estimates of the $u_{i}$'s , the function `fixef` to extract the estimate of $\alpha_{0},$ and the function `coef` to extract the estimates of $\alpha_{i} = \alpha_{0} + u_{i}.$
-The function `coef` returns a named list with one element per grouping variable[^grouping].
-Each element of the `coef`'s output is a data frame with named rows 
+We can use the function `ranef()` to extract the estimates of the $u_{i}$'s, the function `fixef` to extract the estimate of $\alpha_{0},$ and the function `coef()` to extract the estimates of $\alpha_{i} = \alpha_{0} + u_{i}.$
+The function `coef()` returns a named list with one element per grouping variable[^grouping].
+Each element of `coef()`'s output is a data frame with named rows 
 ```{r}
 #| label: display-coef
 tmp <- coef(multilevel_fit)
@@ -450,9 +463,9 @@ tmp[["passer_player_id"]] |> dplyr::slice_head(n = 5) #<1>
 
 [^grouping]: For now, we are only using one grouping variable. But later in [Lecture 10](lecture10.qmd), we will have multiple grouping variables. 
 
-
 We will append our multilevel estimates to our data table `alpha`
 ```{r}
+#| label: append-lmer-alpha
 lmer_alpha <- #<1>
   data.frame( 
     lmer = tmp[["passer_player_id"]][,1], #<2>
@@ -461,7 +474,6 @@ lmer_alpha <- #<1>
 alphas <-
   alphas |>
   dplyr::inner_join(y = lmer_alpha, by = "gsis_id")
-
 ```
 1. We'll create a data frame with columns containing the player identifier and their corresponding parameter estimate
 2. In this case, the output of `coef` is a matrix with 1 column whose row names are just the levels of the grouping variable
@@ -470,7 +482,7 @@ alphas <-
 Our multilevel model returns very high per-pass EPA estimates for several top quarterbacks and very low estimates for quarterbacks widely regarded to have struggled in 2024-25. 
 
 ```{r}
-
+#| label: dispaly-top-alphas
 alphas |>
   dplyr::arrange(dplyr::desc(lmer)) |>
   dplyr::slice(c(1:5, (dplyr::n()-4):dplyr::n())) |>
@@ -479,7 +491,7 @@ alphas |>
 
 We see that our multilevel estimates for players who threw very few passes are are aggressively shrunk towards to the overall grand-mean.
 ```{r}
-#| label: shrinkage-plot
+#| label: fig-shrinkage
 #| fig-width: 6.5
 #| fig-asp: 0.5625
 #| fig-align: center
@@ -498,7 +510,6 @@ abline(h = alpha0_hat, col = oi_colors[3])
 1. The function `fixef()` returns all the *fixed effects* (see below) in a named vector. As this is an intercept-only model, we use the name "(Intercept)" to access the parameter estimate.
 
 
-
 ## Adjusting for additional covariates {#sec-covariates}
 
 Up to this point, we've worked with a rather toy problem, predicting EPA given only the identity of the passer.
@@ -506,6 +517,7 @@ But what if we include additional information about the pass (e.g., whether it w
 Do we still run into the small sample size issues when determining how much EPA an individual player adds, after accounting for this other information?
 
 To see, we re-build our data table `pass2024` but now include: 
+
   * `air_yards`: the distance traveled by the pass through the air[^airyard]
   * `shotgun`: whether the pass was thrown out of the [shotgun formation](https://en.wikipedia.org/wiki/Shotgun_formation)
   * `qb_hit`: whether the quarterback was hit while throwing
@@ -539,8 +551,6 @@ Under this model, $\alpha_{i}$ represents the amount of EPA that can be attribut
 When we fit this single-level linear model using `lm`, we find that the estimated passer-specific intercepts display the exact same small sample size artifacts as our initial intercept-only model. 
 ```{r}
 #| label: full-ols
-
-
 ols_fit_full <- 
   lm(epa ~ passer_player_id + air_yards + posteam_type + shotgun + no_huddle + qb_hit + pass_location, #<1>
      data = pass2024)
@@ -626,7 +636,7 @@ We can further visualize the shrinkage effect by comparing the multiple linear r
 
 
 ```{r}
-#| label: plot-full-alphas
+#| label: fig-full-alphas
 #| fig-width: 6
 #| fig-asp: 0.5625
 #| fig-align: center
